syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Amargar.ReasonNotIntroducingCustomer.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "ReasonNotIntroducingCustomerProto";
option objc_class_prefix = "HLW";

package Amargar;

service ReasonNotIntroducingCustomer{
  rpc GetReasonNotIntroducingCustomer(ReasonNotIntroducingCustomerRequest) returns(ReasonNotIntroducingCustomerReplyList);
}


message ReasonNotIntroducingCustomerRequest {

}

message ReasonNotIntroducingCustomerReply {

  int32 ReasonNotIntroducingCustomerID = 1 ;
  string NameElatAdamMoarefiMoshtary = 2;

}

message ReasonNotIntroducingCustomerReplyList{
  repeated ReasonNotIntroducingCustomerReply ReasonNotIntroducingCustomers = 1;
}
